# triangles

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
custom_gl/: Cargo.toml  build.rs
framework/: Cargo.toml
framework/src/: buffer.rs  ctx_glutin.rs  lib.rs  shader.rs  texture.rs  types.rs
src/: color.frag.glsl  fold.comp.glsl  tex.frag.glsl  tex.vert.glsl
triangles/: Cargo.toml
triangles/src/: color.vert.glsl  dsq.comp.glsl  fold.comp.glsl  main.rs
