[package]
name = "framework"
version = "0.1.0"
authors = ["wolfiestyle <slayerbeast@gmail.com>"]
edition = "2021"

[features]
default = ["image"]

[dependencies]
gl = { package = "custom_gl", path = "../custom_gl" }
glutin = { version = "0.6.1", optional = true }
image = { version = "0.10.3", optional = true }
