[package]
name = "framework"
version = "0.1.0"
authors = ["wolfiestyle <slayerbeast@gmail.com>"]
edition = "2021"

[features]
default = ["image"]

[dependencies]
gl = { package = "custom_gl", path = "../custom_gl" }
glutin = { version = "0.29.1", optional = true }
image = { version = "0.24.4", optional = true }
