[package]
name = "triangles"
version = "0.1.0"
authors = ["wolfiestyle <slayerbeast@gmail.com>"]
edition = "2021"

[dependencies]
gl = { package = "custom_gl", path = "../custom_gl" }
fw = { package = "framework", path = "../framework", features = ["glutin"] }
rand = "0.8.5"
argparse = "0.2.1"
glutin = { version = "0.29.1" }
image = { version = "0.24.4" }
